# supspec

./: LICENSE  README.md  pyproject.toml
src/: _version.py
src/supspec/: run.py
src/supspec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/supspec/support_functions/: import_data.py  mcmc_fitting.py  plot.py  support_functions.py
